--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20200401</p>
       <p>Imvertor: 1.62.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20201204-085007</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20201204-092749</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -3339,6 +3339,13 @@
                            <tr>
                               <th>Type gegeven</th>
                               <td>Attribuut van Gerealiseerd installatie</td>
+                           </tr>
+                           <tr>
+                              <th>Definitie</th>
+                              <td>
+                                 
+                                 <p>Het type installatie zoals dat gebruikt wordt voor het primaire gebruiksdoel.</p>
+                                 </td>
                            </tr>
                            <tr>
                               <th>Juridische status</th>
