--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -3317,6 +3317,13 @@
                      <td>Attribuut van Gerealiseerd installatie</td>
                   </tr>
                   <tr>
+                     <th>Definitie</th>
+                     <td>
+                        
+                        <p>Het type installatie zoals dat gebruikt wordt voor het primaire gebruiksdoel.</p>
+                        </td>
+                  </tr>
+                  <tr>
                      <th>Juridische status</th>
                      <td>Authentiek</td>
                   </tr>
