--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20200401</p>
       <p>Imvertor: 1.63.0</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20210119-134440</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20210122-094504</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1934,7 +1934,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>m3/h</td>
+                              <td>m<sup>3</sup>/h (kubieke meter per uur)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -2436,7 +2436,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>m3/h</td>
+                              <td>m<sup>3</sup>/h (kubieke meter per uur)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -5958,7 +5958,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>MWh</td>
+                              <td>MWh (megawattuur)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6019,7 +6019,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>MWh</td>
+                              <td>MWh (megawattuur)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6279,7 +6279,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>kW</td>
+                              <td>kW (kilowatt)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6347,7 +6347,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>kW</td>
+                              <td>kW (kilowatt)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6415,7 +6415,7 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
-                              <td>kW</td>
+                              <td>kW (kilowatt)</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
