--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -1910,7 +1910,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>m3/h</td>
+                     <td>m<sup>3</sup>/h (kubieke meter per uur)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -2412,7 +2412,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>m3/h</td>
+                     <td>m<sup>3</sup>/h (kubieke meter per uur)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -5934,7 +5934,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>MWh</td>
+                     <td>MWh (megawattuur)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -5995,7 +5995,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>MWh</td>
+                     <td>MWh (megawattuur)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6255,7 +6255,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>kW</td>
+                     <td>kW (kilowatt)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6323,7 +6323,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>kW</td>
+                     <td>kW (kilowatt)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
@@ -6391,7 +6391,7 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
-                     <td>kW</td>
+                     <td>kW (kilowatt)</td>
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Waardebereik</th>
