--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -384,11 +384,11 @@
                      <td>gerelateerdGebruiksrecht</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Grondwatergebruiksysteem</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Recht grondwatergebruik
                         </td>
@@ -432,11 +432,11 @@
                      <td>gerelateerdeGerealiseerdeInstallatie</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Grondwatergebruiksysteem</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gerealiseerd installatie
                         </td>
@@ -479,11 +479,11 @@
                      <td>registratiegeschiedenis</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Grondwatergebruiksysteem</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Registratiegeschiedenis
                         </td>
@@ -534,11 +534,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Grondwatergebruiksysteem</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -582,11 +582,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Grondwatergebruiksysteem</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -754,13 +754,20 @@
                      <td>gerelateerdeOntwerpInstallatie</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Recht grondwatergebruik</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Ontwerpinstallatie
+                        </td>
+                  </tr>
+                  <tr>
+                     <th>Regels IMBRO/A</th>
+                     <td>
+                        
+                        <p>Alleen bij IMBRO/A-gegevens mag de entiteit ontbreken.</p>
                         </td>
                   </tr>
                </tbody>
@@ -803,11 +810,11 @@
                      <td>maximale waterverplaatsing</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Recht grondwatergebruik</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Maximale waterverplaatsing
                         </td>
@@ -877,11 +884,11 @@
                      <td>gebruiksdoel systeem</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Recht grondwatergebruik</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gebruiksdoel systeem
                         </td>
@@ -924,11 +931,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Recht grondwatergebruik</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -1150,11 +1157,11 @@
                      <td>gerelateerdeOntwerpoppervlakteInfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Ontwerpoppervlakteinfiltratie
                         </td>
@@ -1197,11 +1204,11 @@
                      <td>gerelateerdeOntwerpBodemlus</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Ontwerpbodemlus
                         </td>
@@ -1244,11 +1251,11 @@
                      <td>gerelateerdeOntwerpPut</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Ontwerpput
                         </td>
@@ -1293,11 +1300,11 @@
                      <td>maximale waterverplaatsing</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Maximale waterverplaatsing
                         </td>
@@ -1370,11 +1377,11 @@
                      <td>energiekenmerken</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Energiekenmerken
                         </td>
@@ -1435,11 +1442,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -1483,11 +1490,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpinstallatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -1728,11 +1735,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpbodemlus</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -1776,11 +1783,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpbodemlus</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -2024,11 +2031,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpoppervlakteinfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -2072,11 +2079,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpoppervlakteinfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -2574,11 +2581,11 @@
                      <td>filtertraject</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpput</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Filtertraject
                         </td>
@@ -2641,11 +2648,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpput</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -2689,11 +2696,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Ontwerpput</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -2961,11 +2968,11 @@
                      <td>gerelateerdeGerealiseerdOppervlakteinfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd installatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gerealiseerd oppervlakteinfiltratie
                         </td>
@@ -3009,11 +3016,11 @@
                      <td>gerelateerdeGerealiseerdePut</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd installatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gerealiseerd put
                         </td>
@@ -3057,11 +3064,11 @@
                      <td>gerelateerdeGerealiseerdeBodemlus</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd installatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gerealiseerd bodemlus
                         </td>
@@ -3105,11 +3112,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd installatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -3153,11 +3160,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd installatie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -3470,11 +3477,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd bodemlus</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -3518,11 +3525,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd bodemlus</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -3710,11 +3717,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd oppervlakteinfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -3758,11 +3765,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd oppervlakteinfiltratie</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -4194,11 +4201,11 @@
                      <td>gerelateerdGerealiseerdFilter</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd put</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         Gerealiseerd filter
                         </td>
@@ -4241,11 +4248,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd put</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -4289,11 +4296,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd put</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
@@ -4642,11 +4649,11 @@
                      <td>geldigheidsduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd filter</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakGeldigheid
                         </td>
@@ -4690,11 +4697,11 @@
                      <td>levensduur</td>
                   </tr>
                   <tr>
-                     <th>Source</th>
+                     <th>Bron</th>
                      <td>Gerealiseerd filter</td>
                   </tr>
                   <tr>
-                     <th>Target</th>
+                     <th>Doel</th>
                      <td>
                         TijdvakLevensduur
                         </td>
