--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20200401</p>
       <p>Imvertor: 1.63.0</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20210127-152010</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.1-1-20200401-20210128-084210</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -4054,8 +4054,8 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_association_Model_Gerealiseerdput_gerelateerdverkenning"></a><section id="detail_association_Model_Gerealiseerdput_gerelateerdverkenning">
-                     <h4>  gerelateerd verkenning</h4>
+                  </section><a class="anchor" id="detail_association_Model_Gerealiseerdput_gerelateerdeverkenning"></a><section id="detail_association_Model_Gerealiseerdput_gerelateerdeverkenning">
+                     <h4>  gerelateerde verkenning</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
                         <colgroup style="width: 70%;"></colgroup>
@@ -4085,7 +4085,7 @@
                            </tr>
                            <tr>
                               <th>Relatierol naam</th>
-                              <td>gerelateerd verkenning</td>
+                              <td>gerelateerde verkenning</td>
                            </tr>
                            <tr>
                               <th>Bron</th>
@@ -4473,7 +4473,7 @@
                            <th>Definitie</th>
                            <td>
                               
-                              <p>De kenmerken van de verkenning die is uitgevoerd voorafgaand de plaatsing van de contructie.</p>
+                              <p>De kenmerken van de verkenning die is uitgevoerd voorafgaand de plaatsing van de constructie.</p>
                               </td>
                         </tr>
                      </tbody>
@@ -4492,7 +4492,7 @@
                               <th>Definitie</th>
                               <td>
                                  
-                                 <p>De identificatie van een registratie object binnen het registratiedomein bodem- en
+                                 <p>De identificatie van een registratieobject binnen het registratiedomein bodem- en
                                     grondonderzoek in de registratie ondergrond.</p>
                                  </td>
                            </tr>
