--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -4030,8 +4030,8 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_association_Model_Gerealiseerdput_gerelateerdverkenning"></a><section id="detail_association_Model_Gerealiseerdput_gerelateerdverkenning">
-            <h4>  gerelateerd verkenning</h4>
+         </section><a class="anchor" id="detail_association_Model_Gerealiseerdput_gerelateerdeverkenning"></a><section id="detail_association_Model_Gerealiseerdput_gerelateerdeverkenning">
+            <h4>  gerelateerde verkenning</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
                <colgroup style="width: 70%;"></colgroup>
@@ -4061,7 +4061,7 @@
                   </tr>
                   <tr>
                      <th>Relatierol naam</th>
-                     <td>gerelateerd verkenning</td>
+                     <td>gerelateerde verkenning</td>
                   </tr>
                   <tr>
                      <th>Bron</th>
@@ -4449,7 +4449,7 @@
                   <th>Definitie</th>
                   <td>
                      
-                     <p>De kenmerken van de verkenning die is uitgevoerd voorafgaand de plaatsing van de contructie.</p>
+                     <p>De kenmerken van de verkenning die is uitgevoerd voorafgaand de plaatsing van de constructie.</p>
                      </td>
                </tr>
             </tbody>
@@ -4468,7 +4468,7 @@
                      <th>Definitie</th>
                      <td>
                         
-                        <p>De identificatie van een registratie object binnen het registratiedomein bodem- en
+                        <p>De identificatie van een registratieobject binnen het registratiedomein bodem- en
                            grondonderzoek in de registratie ondergrond.</p>
                         </td>
                   </tr>
