--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210201</p>
       <p>Imvertor: 1.64.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210517-163341</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210517-165100</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -6165,8 +6165,8 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>De waarde van het attribuut moet gelijk zijn aan <em>ja</em> wanneer de waarde van het attribuut <em>primair gebruiksdoel</em> gelijk is aan <em>openbareDrinkwatervoorziening</em>.<br clear="none">
-                                    De waarde van het attribuut moet gelijk zijn aan <em>nee</em> wanneer de waarde van het attribuut <em>primair gebruiksdoel</em> gelijk is aan <em>agrarischeDoeleinden</em>, <em>bemaling</em>, <em>brandblusvoorziening</em>, <em>geslotenBodemenergiesysteem</em>, <em>grondwatersanering</em> of <em>openBodemenergiesysteem</em> en de waarde van het attribuut <em>secundair gebruiksdoel</em> gelijk is aan <em>agrarischeDoeleinden</em>, <em>bemaling</em>, <em>brandblusvoorziening</em>, <em>geslotenBodemenergiesysteem</em>, <em>grondwatersanering</em> of <em>openBodemenergiesysteem</em>.</p>
+                                 <p>De waarde moet gelijk zijn aan <em>ja</em> wanneer de waarde van het attribuut <em>primair gebruiksdoel</em> gelijk is aan <em>openbareDrinkwatervoorziening</em>.<br clear="none">
+                                    De waarde moet gelijk zijn aan <em>nee</em> wanneer de waarde van het attribuut <em>primair gebruiksdoel</em> gelijk is aan <em>agrarischeDoeleinden</em>, <em>bemaling</em>, <em>brandblusvoorziening</em>, <em>geslotenBodemenergiesysteem</em>, <em>grondwatersanering</em> of <em>openBodemenergiesysteem</em> en de waarde van het attribuut <em>secundair gebruiksdoel</em> gelijk is aan <em>agrarischeDoeleinden</em>, <em>bemaling</em>, <em>brandblusvoorziening</em>, <em>geslotenBodemenergiesysteem</em>, <em>grondwatersanering</em> of <em>openBodemenergiesysteem</em>.</p>
                                  </td>
                            </tr>
                            <tr>
@@ -7575,7 +7575,7 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>Het gegeven moet aanwezig wanneer de waarde van het attribuut <em>filtertype</em> gelijk is aan <em>Verticaal</em>.<br clear="none">
+                                 <p>Het gegeven moet aanwezig zijn wanneer de waarde van het attribuut <em>filtertype</em> gelijk is aan <em>Verticaal</em>.<br clear="none">
                                     Het gegeven mag ontbreken wanneer de waarde van het attribuut <em>filtertype</em> gelijk is aan <em>nietVerticaal.</em>
                                     </p>
                                  </td>
