--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -6500,7 +6500,7 @@
                      <td>
                         
                         <p>In de Omgevingswet wordt een maximaal volume per kwartaal niet meer genoemd maar in
-                           de voorgaande wetegeving wel.</p>
+                           de voorgaande wetgeving wel.</p>
                         </td>
                   </tr>
                </tbody>
