--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210201</p>
       <p>Imvertor: 1.64.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210517-165100</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.9-1-20210201-20210518-164323</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -6524,7 +6524,7 @@
                               <td>
                                  
                                  <p>In de Omgevingswet wordt een maximaal volume per kwartaal niet meer genoemd maar in
-                                    de voorgaande wetegeving wel.</p>
+                                    de voorgaande wetgeving wel.</p>
                                  </td>
                            </tr>
                         </tbody>
